z-index fix for the close navigation button

--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -102,7 +102,7 @@ body {
             padding: 0;
             opacity: 0;
             transform: translateX(100%);
-            transition: transform 0.3s ease-in-out, opacity 0.6s;
+            transition: transform 0.3s ease-in-out, opacity 0.4s;
 
             ul > li {
                 height: 6rem;
@@ -147,6 +147,7 @@ body {
         background-color: unset;
         border: none;
         padding: 1rem;
+        z-index: 200;
 
         &:focus {
             outline: none;
